# ChangeLog for app-emulation/wine
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*wine-1.7.39 (22 Mar 2015)

  22 Mar 2015; NP-Hardass <np.hardass@gmail.com>
  +files/wine-1.7.39-gstreamer-v5-staging-post.patch,
  +files/wine-1.7.39-gstreamer-v5-staging-pre.patch, +wine-1.7.39.ebuild,
  -files/wine-1.7.38-gstreamer-v5.patch, wine-9999.ebuild:
  Version bump to 1.7.39.  Update 1.7.39 and 9999 with new gstreamer pre-post
  patches GitHub #5

*wine-1.7.38 (08 Mar 2015)

  11 Mar 2015; NP-Hardass <np.hardass@gmail.com>
  +files/wine-1.7.38-gstreamer-v5-staging-post.patch,
  +files/wine-1.7.38-gstreamer-v5-staging-pre.patch, +wine-1.7.38.ebuild,
  wine-9999.ebuild:
  Version bump to 1.7.38 and incorporate changes from upstream Gentoo

*wine-1.7.37 (22 Feb 2015)

  22 Feb 2015; NP-Hardass <np.hardass@gmail.com> +wine-1.7.37.ebuild,
  wine-9999.ebuild:
  Version bump for 1.7.37, new flag for staging vaapi, and s3tc is now rdep only

  12 Feb 2015; NP-Hardass <np.hardass@gmail.com> wine-1.7.33-r2.ebuild,
  wine-1.7.34.ebuild, wine-1.7.35.ebuild, wine-1.7.36.ebuild, wine-9999.ebuild:
  set lcms and xcomposite as default, github issue #3

  12 Feb 2015; NP-Hardass <np.hardass@gmail.com> wine-1.7.33-r2.ebuild,
  wine-1.7.34.ebuild, wine-1.7.35.ebuild, wine-1.7.36.ebuild, wine-9999.ebuild:
  xdg menu fix, github issue #1

*wine-1.7.36 (09 Feb 2015)

  09 Feb 2015; NP-Hardass <np.hardass@gmail.com> +wine-1.7.36.ebuild:
  Version bump to 1.7.36

  26 Jan 2015; NP-Hardass <np.hardass@gmail.com> wine-1.7.33-r2.ebuild:
  Improved perl USE flag handling

*wine-1.7.33-r2 (26 Jan 2015)

  26 Jan 2015; NP-Hardass <np.hardass@gmail.com> +wine-1.7.33-r2.ebuild,
  -wine-1.7.33-r1.ebuild, metadata.xml, wine-1.7.34.ebuild, wine-1.7.35.ebuild,
  wine-9999.ebuild:
  Full D3D9 support, tested with and without staging 1.7.35, 9999

*wine-1.7.35 (24 Jan 2015)

  24 Jan 2015; NP-Hardass <np.hardass@gmail.com> +wine-1.7.35.ebuild:
  Version bump to 1.7.35
