@@ -1,3 +1,4 @@
+DIST wine-1.7.28-gstreamer-v4.patch.bz2 5447 SHA256 64dad250bde6b10d77e688b316217b1b508f3dfb8195a33f6420dc1dfb18ac8a SHA512 65e84d79da9898c3c0508c392182f148384abf8f007c0662c6468414eebb69dec918c6099a3fbff7ffa2dd4a942a1aa1d91dffba494ac37a6f572a7f0162ea0c WHIRLPOOL 0cc7cf63c0f9ed718e2219da01cc05fca0814b0ca98c916141ccb254da91f32ea03ec47c6e106d558d6ca10b3346a9cbd9a1c74ef66cb9983dddd1e50506c940
 DIST wine-1.7.33.tar.bz2 21908969 SHA256 e3519d6fa2c0bb91e58da38f14f02607cf366a0154ff1effe528966106d49275 SHA512 a9bb47383b88e9c60edef7883c3ce25f5ad0895b67cdb4393c1c3f9b9ab7245e8d8318df193722a7b8c87ff57cd554df53a24c988566d1dce808b939ed731451 WHIRLPOOL 3747cc9df638e7cba5aaff8cb6bfa26e5588ba87e5bdc9d5e3202f30973bc2c06b0d65027f113066dce82d851c1591ce86421ce6e7d90944f5206d341f7ed51d
 DIST wine-1.7.34-gstreamer-v5.patch.bz2 5703 SHA256 c3bb6f669f46d9f2d7ba494a2264cee457349f559d4b0758db80e39eb22f2aee SHA512 e780394e8739a58593d264322c462bfe9040c1cabce93b84d24f09040026368efb4ac34a6a302beb6048d14b4ac835b87a0c515b52c1a0c143aa4e15691eb01b WHIRLPOOL 1befbb0fbd026d6e833c5d72341064dd6e12157e1b7df58e349b9985648bfbc63f70e9cab45b61155515ac65057968e30ba313e71e183b8027153c9392d89192
 DIST wine-1.7.34.tar.bz2 21956792 SHA256 4d5a3b25450fb232aa9d0d0dd859b7d50b8ffb6180f24aefb6eb4e400d32330b SHA512 55d8c42ecd146fb92c1d91737e9c6e51d6cc36682964bfc8ef73a4495edf884d84fddca173d297b7553823abbddaf4dbc115a5474419be0611f2723beab00b6c WHIRLPOOL 8842bc71632b04a736e51eb3a016395a5a72b1798d43d1a3343956854d4fa1d9b973498abca0a28717ae5c2fd947970066820d5606dfdedb67e3235ded3de2ce
